telegram-bot-app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-botName= @travelCity1_bot
-botToken=1193004467:AAFRo4SGL7HnIy51zoMVXuhjXBfXBQpeBr8
+botName=
+botToken=
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
